# youbot-py

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile~  README.md  README.rst  changelog.html  configure.sh  genindex.html  index.html  make.bat  objects.inv  search.html  searchindex.js  setup.py
_sources/: index.txt
binding/: binding.cpp  binding.h  binding.h~  youbot_int.h
doc/: Makefile  conf.py  index.rst~  make.bat
doc/_build/doctrees/: environment.pickle
doc/_build/html/: .buildinfo  index.html  objects.inv  searchindex.js
docs/html/: search.html  searchindex.js
docs/html/_sources/: index.txt
doctrees/: changelog.doctree  environment.pickle  index.doctree
examples/: base_example1.py  base_example2.py  helloworld.py
modules/: FindOpenRAVE.cmake
robot/: robot.qmlproject
source/: changelog.rst  conf.py  index.rst
sphinxdoc-test-docs/doctrees/: environment.pickle  index.doctree
sphinxdoc-test-docs/doctrees/source/: includeme.doctree
sphinxdoc-test-docs/html/: genindex.html
src/: main.cpp  robot.cpp
src/libbinding/: CMakeLists.txt  binding.cpp  binding.h  youbot_int.h
src/libbinding/binding/: Makefile  cmake_install.cmake
src/libgui/: CMakeLists.txt  common.h  robot.ui  robotmain.cpp  robotmain.h  robotmain.ui  robotvision.cpp  robotvision.h  robotvision.ui  ui_robotmain.h  ui_robotvision.h
